Доработка общей архитектуры

--- a/android/app/src/main/res/layout/fragment_url.xml
+++ b/android/app/src/main/res/layout/fragment_url.xml
@@ -25,6 +25,17 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <TextView
+        android:id="@+id/url_history_is_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/url_history_is_empty"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolBar"/>
+
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="0dp"
