--- a/android/app/src/main/res/layout/fragment_url.xml
+++ b/android/app/src/main/res/layout/fragment_url.xml
@@ -20,8 +20,7 @@
             android:layout_height="wrap_content"
             app:searchIcon="@null"
             app:iconifiedByDefault="false"
-            app:queryHint="@string/set_url" >
-        </androidx.appcompat.widget.SearchView>
+            app:queryHint="@string/set_url" />
 
     </androidx.appcompat.widget.Toolbar>
 
